Fixed spacing

--- a/components/Auth/auth.css
+++ b/components/Auth/auth.css
@@ -1,5 +1,5 @@
 .auth-container{
-    margin: 4rem 1rem 2rem 1rem;
+    margin: 4rem 1rem;
     display: flex;
     justify-content: center;
 }
