--- a/components/Cart/cart.css
+++ b/components/Cart/cart.css
@@ -124,7 +124,7 @@ input:focus{
 
 .order{
     width: 100%;
-    padding: 1.5rem 1.8rem
+    padding: 1.5rem;
 }
 
 .footer{
